<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="hua.com.uitest.MainActivity">

  <Button
      android:layout_width="match_parent"
      android:layout_height="60dp"
      android:text="@string/listview"
      android:id="@+id/btn_listview"
      />

    <Button
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/str_AlterDialog"
        android:id="@+id/btn_AlterDialog"
        />

  <Button
      android:layout_width="match_parent"
      android:layout_height="60dp"
      android:text="@string/xml_menu"
      android:id="@+id/btn_mune"
      />

  <Button
      android:layout_width="match_parent"
      android:layout_height="60dp"
      android:text="@string/actionmode"
      android:id="@+id/btn_actionmode"
      />
</LinearLayout>
